# bala-murugan-s.github.io

./: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  script.js  style.css  test-app\bms2index.html  test-app\bmstestindex.html  version.json
devops-tools/: index.html
devops-tools/devops-cheatsheet/: index.html  package-lock.json  vite.config.js
firewall-tools/: firewall-index.html  index.html  multivendorcliwb-index.html
knowledge/: knowledge-home-index.html
knowledge/blogs/: index.html  sase-migration.md
knowledge/git-set-file/network-diagnostic-tauri/src-tauri/: Cargo.toml  tauri.conf.json
knowledge/git-set-file/network-diagnostic-tauri/src-tauri/src/: lib.rs  main.rs
knowledge/git-set-file/network-diagnostic-tauri/src-tauri/src/commands/: dns.rs  mod.rs  parallel_ping.rs  ping.rs  traceroute.rs
knowledge/runbooks/: index.html
knowledge/shared/: markdown.js
knowledge/standards/: index.html
knowledge/training/: AI-Firewall-Agent-Demo.html  Azure-Frontend-Cache-Deletion-Agent-Demo.html  Azure-Frontend-SSL-Analyzer-Agent-Demo.html  F5-AI-Agent-Demo-LTM-Pool-Recovery.html
network-tools/: index.html  network-index.html
resume/: Experience-index.html
sase-tools/: index.html
sdwan-tools/: app.js  index.html
security-tools/: index.html  security-index.html  security-index2.html  testsecindex.html
ssl-certificate-toolkit/: index.html
test-app-tools/: index.html  prompt.md
testapp-1/: home234index.html  sectoolsindex.html
toolkit/: index.html  styles.css
tools/: tools-home.html
(+233 files in other folders)
